# clingo-cpp

./: .cproject  .gitignore  .project  .sconsign.dblite  CHANGES  CMakeLists.txt  SConstruct  package.xml
.sconf_temp/: conftest_10  conftest_11  conftest_14  conftest_3.os  conftest_5  conftest_9
app/example/: main.cc
app/web/: main.cc
cmake/: tbb_extras.cmake
libclingo/src/: clingocontrol.cc
libgringo/gringo/: version.hh
libgringo/src/: python.cc
