<?xml version="1.0"?>
<package>
  <name>clingo_cpp</name>
  <version>0.0.0</version>
  <description>This package is basically copy of the original "Potassco" repository from the University of Potsdam. 
  This repository was created, in order to have a GIT-Repository of the original source code.</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>GPLv3</license>

  <url type="website">http://potassco.sourceforge.net/</url>

  <author>Thorsten Schaub</author>
  <author>Roland Kaminski</author>
  <author>Benjamin Kaufmann</author>

  <buildtool_depend>catkin</buildtool_depend>



  <export>
  </export>
</package>
